Added group for horizontal list items, tags and markup and altered link interactive state styles

--- a/src/mustache/index.mustache
+++ b/src/mustache/index.mustache
@@ -23,13 +23,24 @@
     <br>
     <span class="duration"><time datetime="12-2016">December 2016</time> to <time datetime="01-2017">January 2017</time></span>
     <nav class="nav-contact">
-      <ul>
-        <li><a class="icon-github" href="#">github/hellorich</a></li>
-        <li><a class="icon-twitter" href="#">twitter/hellorich</a></li>
+      <ul class="group-horizontal">
+        <li><a class="icon-github" rel="external" href="https://github.com/hellorich">github/hellorich</a></li>
+        <li><a class="icon-twitter" rel="external" href="#">twitter/hellorich</a></li>
         <li><a class="icon-email" href="#">rich.cookson@gmail.com</a></li>
         <li><a class="icon-telephone" href="#">07792 871 698</a></li>
       </ul>
     </nav>
+    <br>
+    <ul class="group-horizontal center">
+      <li class="tag"><a rel="external" href="https://bower.io">Bower</a></li>
+      <li class="tag"><a rel="external" href="https://git-scm.com">Git</a></li>
+      <li class="tag"><a rel="external" href="http://gruntjs.com">Grunt</a></li>
+      <li class="tag"><a rel="external" href="https://en.wikipedia.org/wiki/Responsive_web_design">Responsive Web Design</a></li>
+      <li class="tag"><a rel="external" href="https://www.scrum.org/Resources/What-is-Scrum">Scrum</a></li>
+      <li class="tag"><a rel="external" href="https://www.sketchapp.com">Sketch</a></li>
+      <li class="tag"><a rel="external" href="https://www.w3.org/Graphics/SVG">SVG</a></li>
+      <li class="tag"><a rel="external" href="http://www.opengroup.org/unix">UNIX Command Line</a></li>
+    </ul>
   </main>
 
 {{> partials/foot }}
