--- a/src/sass/atoms/_hyperlinks.scss
+++ b/src/sass/atoms/_hyperlinks.scss
@@ -7,7 +7,7 @@ a {
   text-decoration: none;
 
   &:active, &:focus, &:hover {
+    color: setColor(brand, color_accent);
     outline: none; // [TODO] - Make better outline that looks good in all contexts
-    text-decoration: underline;
   }
 }
