--- a/src/sass/manifest.scss
+++ b/src/sass/manifest.scss
@@ -35,12 +35,14 @@
 
 @import 'atoms/body';
 @import 'atoms/duration';
+@import 'atoms/groups';
 @import 'atoms/headings';
 @import 'atoms/hyperlinks';
 @import 'atoms/icons';
 @import 'atoms/lists';
 @import 'atoms/list-unordered';
 @import 'atoms/paragraphs';
+@import 'atoms/tags';
 
 // Molecules
 
