--- a/src/sass/utilities/libraries/_colors.scss
+++ b/src/sass/utilities/libraries/_colors.scss
@@ -5,6 +5,8 @@
 $palettes: (
   neutral: (
     color_white: rgb(255, 255, 255),
+    color_gray_90: rgb(229, 229, 229),
+    color_gray_85: rgb(217, 217, 217),
     color_gray_80: rgb(204, 204, 204),
     color_gray_60: rgb(154, 154, 154),
     color_gray_50: rgb(128, 128, 128),
