--- a/src/sass/atoms/_groups.scss
+++ b/src/sass/atoms/_groups.scss
@@ -4,6 +4,7 @@
 
 .group-horizontal {
   li {
+    @include margin(null em(4) em(8) null); // [TODO] - This spacing might be better more specific
     display: inline-block;
   }
 }
