--- a/src/sass/templates/_all.scss
+++ b/src/sass/templates/_all.scss
@@ -2,6 +2,23 @@
 // All: Global template
 // ---------------------------------------------------------------------------------
 
-.main {
+.page {
   @include outer-container(rem(960));
+  margin-top: rem(64);
+}
+
+.header {
+	@include shift(2);
+  @include span-columns(10);
+}
+
+.nav-contact {
+  @include shift(2);
+  @include span-columns(10);
+  margin-bottom: rem(32);
+}
+
+.main {
+  @include shift(2);
+  @include span-columns(10);
 }
