--- a/src/mustache/index.mustache
+++ b/src/mustache/index.mustache
@@ -9,13 +9,15 @@
 
     {{> partials/content/header }}
 
+    {{> partials/content/introduction }}
+
     {{> partials/content/nav-contact }}
 
     <main class="main" role="main">
-      
+
       {{> partials/content/section-skills }}
 
-      {{! partials/content/section-career }}
+      {{> partials/content/section-career }}
 
     </main>
 
