--- a/src/sass/templates/_all.scss
+++ b/src/sass/templates/_all.scss
@@ -6,25 +6,28 @@
   @include outer-container(rem(960));
   margin-top: rem(64);
   position: relative;
-
-  // [TODO] - This needs improving into the grid proper I think, use rows
-  &:before {
-    @include position(absolute, 0 null null 0);
-    background-image: url('/assets/img/png/avatar.png');
-    background-position: top center;
-    background-repeat: no-repeat;
-    content: '';
-    display: block;
-    height: 200px;
-    margin-left: 2.3576515979%;
-    margin-right: 2.3576515979%;
-    width: 14.7019570017%;
-  }
 }
 
 .header {
-  @include shift(2);
-  @include span-columns(10);
+  @include row();
+
+  &:before {
+    @extend .avatar;
+    @include span-columns(2);
+  }
+
+  h1 {
+    @include span-columns(10);
+  }
+}
+
+.introduction {
+  @include row();
+
+  p { // This needs structural adjustment to allow for multiple HTML tags, not just one <p>
+    @include shift(2);
+    @include span-columns(10);
+  }
 }
 
 .nav-contact {
@@ -36,4 +39,8 @@
 .main {
   @include shift(2);
   @include span-columns(10);
+}
+
+.section {
+  margin-bottom: rem(32);
 }
