Updated skill tags and set up HTML markup for a project

--- a/src/mustache/partials/content/section-career.mustache
+++ b/src/mustache/partials/content/section-career.mustache
@@ -1,3 +1,21 @@
 <section class="section" id="section-career">
-  <h2>Recent projects</h2>
+  <header>
+    <h2>Recent projects</h2>
+    <p>Here’s what I’ve been doing over the last year or so. My full career history is available on <a href="https://www.linkedin.com/in/richard-cookson-219377b8">LinkedIn</a>.</p>
+  </header>
+
+  <article class="article article-project" style="display:none">
+    <h3>University of Sussex redesign</h3>
+    <a href="http://www.sussex.ac.uk">www.sussex.ac.uk</a>
+    <span class="duration">
+      <time datetime="12-2016">December 2016</time> to <time datetime="01-2017">January 2017</time>
+    </span>
+    <p>Continuing the rolling redesign of the University’s site, this time focusing on the complex course information pages.</p>
+    <ul class="list">
+      <li>Produced the intial course template from Sketch designs utilising Foundation 6 components and custom code where necessary, and refined them based on UX testing.</li>
+      <li>Carried out site performance optimisation, removing and refactoring legacy code as necessary.</li>
+      <li>Upgraded the site core to the latest version of Foundation 6 to take advantage of new responsive components.</li>
+    </ul>
+  </article>
+
 </section>
