--- a/src/mustache/partials/content/section-skills.mustache
+++ b/src/mustache/partials/content/section-skills.mustache
@@ -4,22 +4,23 @@
     <li class="tag"><a rel="external" href="https://developer.mozilla.org/en/docs/Web/Guide/HTML/HTML5">HTML</a></li>
     <li class="tag"><a rel="external" href="">CSS</a></li>
     <li class="tag"><a rel="external" href="">JavaScript</a></li>
-    <li class="tag"><a rel="external" href="">Accessibility</a></li>
     <li class="tag"><a rel="external" href="">SASS</a></li>
     <li class="tag"><a rel="external" href="">LESS</a></li>
+    <li class="tag"><a rel="external" href="">Accessibility</a></li>
     <li class="tag"><a rel="external" href="">Atomic Design</a></li>
     <li class="tag"><a rel="external" href="https://en.wikipedia.org/wiki/Responsive_web_design">Responsive Design</a></li>
     <li class="tag"><a rel="external" href="https://www.sketchapp.com">Sketch</a></li>
+    <li class="tag"><a rel="external" href="https://www.w3.org/Graphics/SVG">SVG</a></li>
     <li class="tag"><a rel="external" href="">jQuery</a></li>
     <li class="tag"><a rel="external" href="">RequireJS</a></li>
     <li class="tag"><a rel="external" href="">NodeJS</a></li>
     <li class="tag"><a rel="external" href="http://gruntjs.com">Grunt</a></li>
     <li class="tag"><a rel="external" href="https://git-scm.com">Git</a></li>
     <li class="tag"><a rel="external" href="https://bower.io">Bower</a></li>
+    <li class="tag"><a rel="external" href="http://www.opengroup.org/unix">Vagrant</a></li>
     <li class="tag"><a rel="external" href="">Foundation</a></li>
     <li class="tag"><a rel="external" href="">Bootstrap</a></li>
     <li class="tag"><a rel="external" href="https://www.scrum.org/Resources/What-is-Scrum">Scrum</a></li>
-    <li class="tag"><a rel="external" href="https://www.w3.org/Graphics/SVG">SVG</a></li>
-    <li class="tag"><a rel="external" href="http://www.opengroup.org/unix">UNIX Command Line</a></li>
+    <li class="tag"><a rel="external" href="http://www.opengroup.org/unix">UNIX</a></li>
   </ul>
 </section>
