--- a/src/sass/atoms/_tags.scss
+++ b/src/sass/atoms/_tags.scss
@@ -9,8 +9,11 @@
     background-color: setColor(brand, color_primary);
     color: setColor(neutral, color_white);
     display: block;
+    min-width: em(80);
     padding: em(8);
+    text-align: center;
     text-decoration: none;
+    text-transform: uppercase;
 
     &:link,
     &:visited {
