Updated phone number and adjusted links to be external

--- a/src/mustache/partials/content/nav-contact.mustache
+++ b/src/mustache/partials/content/nav-contact.mustache
@@ -3,6 +3,6 @@
     <li><a class="icon-github" rel="external" href="https://github.com/hellorich">github/hellorich</a></li>
     <li><a class="icon-twitter" rel="external" href="#">twitter/hellorich</a></li>
     <li><a class="icon-email" href="#">rich.cookson@gmail.com</a></li>
-    <li><a class="icon-telephone" href="#">07792 871 698</a></li>
+    <li><a class="icon-telephone" href="#">+44 7792 871 698</a></li>
   </ul>
 </nav>
