--- a/src/mustache/partials/content/section-career.mustache
+++ b/src/mustache/partials/content/section-career.mustache
@@ -1,12 +1,12 @@
 <section class="section" id="section-career">
   <header>
     <h2>Recent projects</h2>
-    <p>Here’s what I’ve been doing over the last year or so. My full career history is available on <a href="https://www.linkedin.com/in/richard-cookson-219377b8">LinkedIn</a>.</p>
+    <p>Here’s what I’ve been doing over the last year or so. My full career history is available on <a rel="external" href="https://www.linkedin.com/in/richard-cookson-219377b8">LinkedIn</a>.</p>
   </header>
 
   <article class="article article-project" style="display:none">
     <h3>University of Sussex redesign</h3>
-    <a href="http://www.sussex.ac.uk">www.sussex.ac.uk</a>
+    <a rel="external" href="http://www.sussex.ac.uk">www.sussex.ac.uk</a>
     <span class="duration">
       <time datetime="12-2016">December 2016</time> to <time datetime="01-2017">January 2017</time>
     </span>
