Added initial content and styles for the career history section

--- a/src/mustache/partials/content/section-career.mustache
+++ b/src/mustache/partials/content/section-career.mustache
@@ -4,18 +4,147 @@
     <p>Here’s what I’ve been doing over the last year or so. My full career history is available on <a rel="external" href="https://www.linkedin.com/in/richard-cookson-219377b8">LinkedIn</a>.</p>
   </header>
 
-  <article class="article article-project" style="display:none">
-    <h3>University of Sussex redesign</h3>
-    <a rel="external" href="http://www.sussex.ac.uk">www.sussex.ac.uk</a>
-    <span class="duration">
-      <time datetime="12-2016">December 2016</time> to <time datetime="01-2017">January 2017</time>
-    </span>
-    <p>Continuing the rolling redesign of the University’s site, this time focusing on the complex course information pages.</p>
-    <ul class="list">
-      <li>Produced the intial course template from Sketch designs utilising Foundation 6 components and custom code where necessary, and refined them based on UX testing.</li>
-      <li>Carried out site performance optimisation, removing and refactoring legacy code as necessary.</li>
-      <li>Upgraded the site core to the latest version of Foundation 6 to take advantage of new responsive components.</li>
-    </ul>
+  <article class="article article-project">
+    <header class="article-header">
+      <h3 class="article-heading">University of Sussex redesign</h3>
+      <a rel="external" href="http://www.sussex.ac.uk">www.sussex.ac.uk</a>
+      <span class="duration">
+        <time datetime="12-2016">December 2016</time> to <time datetime="02-2017">February 2017</time>
+      </span>
+    </header>
+
+    <div class="article-content">
+      <p>Continuing the rolling redesign of the University’s site, this time focusing on the complex course information pages.</p>
+      <ul class="list">
+        <li>Produced the intial course template from Sketch designs utilising Foundation 6 components and custom code where necessary, and refined them based on UX testing.</li>
+        <li>Carried out site performance optimisation, removing and refactoring legacy code as necessary.</li>
+        <li>Upgraded the site core to the latest version of Foundation 6 to take advantage of new responsive components.</li>
+      </ul>
+    </div>
   </article>
 
+  <article class="article article-project">
+    <header class="article-header">
+      <h3 class="article-heading">Futurebrand style-guide app update </h3>
+      <a rel="external" href="http://www.futurebrand.com">www.futurebrand.com</a>
+      <span class="duration">
+        <time datetime="12-2016">December 2016</time> to <time datetime="01-2017">January 2017</time>
+      </span>
+    </header>
+
+    <div class="article-content">
+      <p>Working on Futurebrand’s style-guide application, based on Craft CMS.</p>
+      <ul class="list">
+        <li>Implemented new brands and reworked some Twig templates to allow custom features.</li>
+        <li>Re-organised SASS code to make implementation of new brand styles an easier process.</li>
+        <li>Implemented new brands and reworked some Twig templates to allow custom features.</li>
+      </ul>
+    </div>
+  </article>
+
+  <article class="article article-project">
+    <header class="article-header">
+      <h3 class="article-heading">Team lead on large content site redesign for Futurebrand</h3>
+      <a rel="external" href="http://www.futurebrand.com">www.futurebrand.com</a>
+      <span class="duration">
+        <time datetime="09-2016">September</time> to <time datetime="12-2017">December 2016</time>
+      </span>
+    </header>
+
+    <div class="article-content">
+      <p>Replaced the lead front end developer midway through the project, I completed the construction of a style-guide of component based on Bootstrap 3.</p>
+      <ul class="list">
+        <li>Led a small team of two other front end developers in continuing the build.</li>
+        <li>Worked with the project manager to organise tasks and attended daily Scrum remotely, utilising tools such as Slack to keep in touch with all participants in the project.</li>
+        <li>Re-organised deployment of component style-guide using Springloops and management of the project Git repository.</li>
+      </ul>
+    </div>
+  </article>
+
+  <article class="article article-project">
+    <header class="article-header">
+      <h3 class="article-heading">University of Sussex redesign</h3>
+      <a rel="external" href="http://www.sussex.ac.uk">www.sussex.ac.uk</a>
+      <span class="duration">
+        <time datetime="07-2016">July</time> to <time datetime="08-2017">August 2016</time>
+      </span>
+    </header>
+
+    <div class="article-content">
+      <p>Principal front end developer working on templates for a rolling redesign of the University site focused on improving recruitment of new students.</p>
+      <ul class="list">
+        <li>Upgraded core code to Foundation 6 and reorganised code to create new components based on the atomic design methodology.</li>
+        <li>Reworked legacy JavaScript to be more modular and utilise Foundation components more readily.</li>
+        <li>Implemented new designs based on a responsive, mobile first perspective.</li>
+      </ul>
+    </div>
+  </article>
+
+  <article class="article article-project">
+    <header class="article-header">
+      <h3 class="article-heading">Animation to show application workflow</h3>
+      <a rel="external" href="http://www.lshift.net">www.lshift.net</a>
+      <span class="duration">
+        <time datetime="06-2016">June 2016</time>
+      </span>
+    </header>
+
+    <div class="article-content">
+      <p>Created a complex animation to show the purpose of a publishing application utilising Greensock JavaScript animation library.</p>
+    </div>
+  </article>
+
+  <article class="article article-project">
+    <header class="article-header">
+      <h3 class="article-heading">Home page redesign and dev-ops consultation for DeWynters</h3>
+      <a rel="external" href="http://www.dewynters.com">www.dewynters.com</a>
+      <span class="duration">
+        <time datetime="05-2016">May 2016</time>
+      </span>
+    </header>
+
+    <div class="article-content">
+      <p>Covering for a lack of development staff internally, I worked on a redesign of the DeWynters home page and advised on new development systems to replace their aging Dreamweaver/Adobe workflow.</p>
+      <ul class="list">
+        <li>Advised on internal procedures for source code control using Git and build automation using Grunt.</li>
+        <li>Produced initial version of new responsive DeWynters home page and handed it over for testing and completion by internal team.</li>
+      </ul>
+    </div>
+  </article>
+
+  <article class="article article-project">
+    <header class="article-header">
+      <h3 class="article-heading">Microsite for Mediacom client pitch</h3>
+      <a rel="external" href="http://www.mediacom.com">www.mediacom.com</a>
+      <span class="duration">
+        <time datetime="04-2016">April 2016</time>
+      </span>
+    </header>
+
+    <div class="article-content">
+      <p>Constructed responsive microsite, working closely with project managers and designer, to introduce Mediacoms client to the marketing team they proposed for a pitch.</p>
+      <ul class="list">
+        <li>Set up production server from scratch on Linode hosting platform, and sourced domain name for the site.</li>
+        <li>Implemented simple PHP access control.</li>
+      </ul>
+    </div>
+  </article>
+
+  <article class="article article-project">
+    <header class="article-header">
+      <h3 class="article-heading">Wallpaper.com navigation redesign for Time</h3>
+      <a rel="external" href="http://www.wallpaper.com">www.wallpaper.com</a>
+      <span class="duration">
+        <time datetime="01-2016">January</time> to <time datetime="03-2016">March 2016</time>
+      </span>
+    </header>
+
+    <div class="article-content">
+      <p>Built several possible versions of a new responsive navigation system for Wallpaper.com for UX testing, with final result being deployed. I also carried out maintenance work on other Time Inc. properties.</p>
+      <ul class="list">
+        <li>Worked with Vagrant based development environment and built skills in setting up Vagrant VM’s from scratch.</li>
+        <li>Utilised Jenkins and Git in a Continuous Integration environment for updating sites with fixes and enhancements.</li>
+      </ul>
+    </div>
+  </article>
 </section>
