Updated skills and career sections

--- a/src/mustache/partials/content/section-career.mustache
+++ b/src/mustache/partials/content/section-career.mustache
@@ -82,8 +82,8 @@
 
   <article class="article article-project">
     <header class="article-header">
-      <h3 class="article-heading">Animation to show application workflow</h3>
-      <a rel="external" href="http://www.lshift.net">www.lshift.net</a>
+      <h3 class="article-heading">Animation to show application workflow for Typesetr</h3>
+      <a rel="external" href="http://www.typesetr.com">www.typesetr.com</a>
       <span class="duration">
         <time datetime="06-2016">June 2016</time>
       </span>
