--- a/src/mustache/partials/content/section-skills.mustache
+++ b/src/mustache/partials/content/section-skills.mustache
@@ -2,24 +2,24 @@
   <h2>Skills</h2>
   <ul class="group-horizontal center">
     <li class="tag"><a rel="external" href="https://developer.mozilla.org/en/docs/Web/Guide/HTML/HTML5">HTML</a></li>
-    <li class="tag"><a rel="external" href="">CSS</a></li>
-    <li class="tag"><a rel="external" href="">JavaScript</a></li>
-    <li class="tag"><a rel="external" href="">SASS</a></li>
-    <li class="tag"><a rel="external" href="">LESS</a></li>
-    <li class="tag"><a rel="external" href="">Accessibility</a></li>
-    <li class="tag"><a rel="external" href="">Atomic Design</a></li>
+    <li class="tag"><a rel="external" href="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS</a></li>
+    <li class="tag"><a rel="external" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">JavaScript</a></li>
+    <li class="tag"><a rel="external" href="http://sass-lang.com">SASS</a></li>
+    <li class="tag"><a rel="external" href="http://lesscss.org">LESS</a></li>
+    <li class="tag"><a rel="external" href="https://www.w3.org/standards/webdesign/accessibility">Accessibility</a></li>
+    <li class="tag"><a rel="external" href="http://atomicdesign.bradfrost.com">Atomic Design</a></li>
     <li class="tag"><a rel="external" href="https://en.wikipedia.org/wiki/Responsive_web_design">Responsive Design</a></li>
     <li class="tag"><a rel="external" href="https://www.sketchapp.com">Sketch</a></li>
     <li class="tag"><a rel="external" href="https://www.w3.org/Graphics/SVG">SVG</a></li>
-    <li class="tag"><a rel="external" href="">jQuery</a></li>
-    <li class="tag"><a rel="external" href="">RequireJS</a></li>
-    <li class="tag"><a rel="external" href="">NodeJS</a></li>
+    <li class="tag"><a rel="external" href="https://jquery.com">jQuery</a></li>
+    <li class="tag"><a rel="external" href="http://requirejs.org">RequireJS</a></li>
+    <li class="tag"><a rel="external" href="https://nodejs.org">NodeJS</a></li>
     <li class="tag"><a rel="external" href="http://gruntjs.com">Grunt</a></li>
     <li class="tag"><a rel="external" href="https://git-scm.com">Git</a></li>
     <li class="tag"><a rel="external" href="https://bower.io">Bower</a></li>
     <li class="tag"><a rel="external" href="http://www.opengroup.org/unix">Vagrant</a></li>
-    <li class="tag"><a rel="external" href="">Foundation</a></li>
-    <li class="tag"><a rel="external" href="">Bootstrap</a></li>
+    <li class="tag"><a rel="external" href="http://foundation.zurb.com">Foundation</a></li>
+    <li class="tag"><a rel="external" href="http://getbootstrap.com">Bootstrap</a></li>
     <li class="tag"><a rel="external" href="https://www.scrum.org/Resources/What-is-Scrum">Scrum</a></li>
     <li class="tag"><a rel="external" href="http://www.opengroup.org/unix">UNIX</a></li>
   </ul>
