Improved responsive code for header, avatar and contact nav

--- a/src/sass/atoms/_groups.scss
+++ b/src/sass/atoms/_groups.scss
@@ -2,9 +2,8 @@
 // Groups
 // ---------------------------------------------------------------------------------
 
-.group-horizontal {
-  li {
-    @include margin(null em(4) em(8) null); // [TODO] - This spacing might be better more specific
+@mixin group-horizontal() {
+  > * {
     display: inline-block;
   }
 }
