--- a/src/sass/atoms/_headings.scss
+++ b/src/sass/atoms/_headings.scss
@@ -10,9 +10,15 @@ h1, h2, h3, h4, h5 {
 
 h1 {
   color: setColor(neutral, color_gray_20);
-  font-size: rem(64);
+  font-size: rem(48);
   font-weight: 900;
   letter-spacing: rem(-1);
+  text-align: center;
+
+  @include media($bp-medium) {
+    font-size: rem(64);
+    text-align: left;
+  }
 }
 
 h2 {
