--- a/src/mustache/partials/content/nav-contact.mustache
+++ b/src/mustache/partials/content/nav-contact.mustache
@@ -1,5 +1,5 @@
 <nav class="nav-contact">
-  <ul class="group-horizontal">
+  <ul class="nav-contact-list">
     <li><a class="icon-email" href="mailto:rich.cookson@gmail.com">rich.cookson@gmail.com</a></li>
     <li><a class="icon-telephone" href="tel:447792871698">+44 7792 871 698</a></li>
     <li><a class="icon-github" rel="external" href="https://github.com/hellorich">github/hellorich</a></li>
