--- a/src/sass/atoms/_avatar.scss
+++ b/src/sass/atoms/_avatar.scss
@@ -4,9 +4,13 @@
 
 .avatar {
   background-image: url('/assets/img/png/avatar.png');
-  background-position: top right;
+  background-position: top center;
   background-repeat: no-repeat;
   content: '';
   display: block;
   height: 100px;
+
+  @include media($bp-medium) {
+    background-position: top right;
+  }
 }
