Improved responsive states of article metadata

--- a/src/mustache/partials/content/section-career.mustache
+++ b/src/mustache/partials/content/section-career.mustache
@@ -8,7 +8,7 @@
     <article class="article article-project">
       <header class="article-header">
         <h3 class="article-heading">University of Sussex redesign</h3>
-        <div class="group-horizontal">
+        <div class="article-metadata">
           <a rel="external" href="http://www.sussex.ac.uk">www.sussex.ac.uk</a>
           <span class="duration">
             <time datetime="12-2016">December 2016</time> to <time datetime="02-2017">February 2017</time>
@@ -29,7 +29,7 @@
     <article class="article article-project">
       <header class="article-header">
         <h3 class="article-heading">Futurebrand style-guide app update </h3>
-        <div class="group-horizontal">
+        <div class="article-metadata">
           <a rel="external" href="http://www.futurebrand.com">www.futurebrand.com</a>
           <span class="duration">
             <time datetime="12-2016">December 2016</time> to <time datetime="01-2017">January 2017</time>
@@ -50,7 +50,7 @@
     <article class="article article-project">
       <header class="article-header">
         <h3 class="article-heading">Team lead on large content site redesign for Futurebrand</h3>
-        <div class="group-horizontal">
+        <div class="article-metadata">
           <a rel="external" href="http://www.futurebrand.com">www.futurebrand.com</a>
           <span class="duration">
             <time datetime="09-2016">September</time> to <time datetime="12-2017">December 2016</time>
@@ -71,7 +71,7 @@
     <article class="article article-project">
       <header class="article-header">
         <h3 class="article-heading">University of Sussex redesign</h3>
-        <div class="group-horizontal">
+        <div class="article-metadata">
           <a rel="external" href="http://www.sussex.ac.uk">www.sussex.ac.uk</a>
           <span class="duration">
             <time datetime="07-2016">July</time> to <time datetime="08-2017">August 2016</time>
@@ -92,7 +92,7 @@
     <article class="article article-project">
       <header class="article-header">
         <h3 class="article-heading">Animation to show application workflow for Typesetr</h3>
-        <div class="group-horizontal">
+        <div class="article-metadata">
           <a rel="external" href="http://www.typesetr.com">www.typesetr.com</a>
           <span class="duration">
             <time datetime="06-2016">June 2016</time>
@@ -108,7 +108,7 @@
     <article class="article article-project">
       <header class="article-header">
         <h3 class="article-heading">Home page redesign and dev-ops consultation for DeWynters</h3>
-        <div class="group-horizontal">
+        <div class="article-metadata">
           <a rel="external" href="http://www.dewynters.com">www.dewynters.com</a>
           <span class="duration">
             <time datetime="05-2016">May 2016</time>
@@ -128,7 +128,7 @@
     <article class="article article-project">
       <header class="article-header">
         <h3 class="article-heading">Microsite for Mediacom client pitch</h3>
-        <div class="group-horizontal">
+        <div class="article-metadata">
           <a rel="external" href="http://www.mediacom.com">www.mediacom.com</a>
           <span class="duration">
             <time datetime="04-2016">April 2016</time>
@@ -148,8 +148,7 @@
     <article class="article article-project">
       <header class="article-header">
         <h3 class="article-heading">Wallpaper.com navigation redesign for Time</h3>
-
-        <div class="group-horizontal">
+        <div class="article-metadata">
           <a rel="external" href="http://www.wallpaper.com">www.wallpaper.com</a>
           <span class="duration">
             <time datetime="01-2016">January</time> to <time datetime="03-2016">March 2016</time>
