--- a/src/sass/molecules/_article-header.scss
+++ b/src/sass/molecules/_article-header.scss
@@ -7,7 +7,13 @@
 		margin-bottom: em(8, 32);
 	}
 
-	.duration {
-		margin-left: em(8);
+	.article-metadata {
+		@include media($bp-medium) {
+			@include group-horizontal();
+
+			.duration {
+				margin-left: em(8);
+			}
+		}
 	}
 }
