Adjusted career section heading text

--- a/src/mustache/partials/content/section-career.mustache
+++ b/src/mustache/partials/content/section-career.mustache
@@ -1,6 +1,6 @@
 <section class="section section-career">
   <header class="section-header">
-    <h2>Recent projects</h2>
+    <h2>Recent work</h2>
     <p>Here’s what I’ve been doing over the last year or so. My full career history is available on <a rel="external" href="https://www.linkedin.com/in/richard-cookson-219377b8">LinkedIn</a>.</p>
   </header>
 
