Changed class names

--- a/src/mustache/partials/content/section-career.mustache
+++ b/src/mustache/partials/content/section-career.mustache
@@ -5,7 +5,7 @@
   </header>
 
   <div class="section-content">
-    <article class="article article-project">
+    <article class="article article-work">
       <header class="article-header">
         <h3 class="article-heading">University of Sussex redesign</h3>
         <div class="article-metadata">
@@ -26,7 +26,7 @@
       </div>
     </article>
 
-    <article class="article article-project">
+    <article class="article article-work">
       <header class="article-header">
         <h3 class="article-heading">Futurebrand style-guide app update </h3>
         <div class="article-metadata">
@@ -47,7 +47,7 @@
       </div>
     </article>
 
-    <article class="article article-project">
+    <article class="article article-work">
       <header class="article-header">
         <h3 class="article-heading">Team lead on large content site redesign for Futurebrand</h3>
         <div class="article-metadata">
@@ -68,7 +68,7 @@
       </div>
     </article>
 
-    <article class="article article-project">
+    <article class="article article-work">
       <header class="article-header">
         <h3 class="article-heading">University of Sussex redesign</h3>
         <div class="article-metadata">
@@ -89,7 +89,7 @@
       </div>
     </article>
 
-    <article class="article article-project">
+    <article class="article article-work">
       <header class="article-header">
         <h3 class="article-heading">Animation to show application workflow for Typesetr</h3>
         <div class="article-metadata">
@@ -105,7 +105,7 @@
       </div>
     </article>
 
-    <article class="article article-project">
+    <article class="article article-work">
       <header class="article-header">
         <h3 class="article-heading">Home page redesign and dev-ops consultation for DeWynters</h3>
         <div class="article-metadata">
@@ -125,7 +125,7 @@
       </div>
     </article>
 
-    <article class="article article-project">
+    <article class="article article-work">
       <header class="article-header">
         <h3 class="article-heading">Microsite for Mediacom client pitch</h3>
         <div class="article-metadata">
@@ -145,7 +145,7 @@
       </div>
     </article>
 
-    <article class="article article-project">
+    <article class="article article-work">
       <header class="article-header">
         <h3 class="article-heading">Wallpaper.com navigation redesign for Time</h3>
         <div class="article-metadata">
