Added final three sections markup and layout code

--- a/src/mustache/index.mustache
+++ b/src/mustache/index.mustache
@@ -19,6 +19,12 @@
 
       {{> partials/content/section-skills }}
 
+      {{> partials/content/section-projects }}
+
+      {{> partials/content/section-learning }}
+
+      {{> partials/content/section-about }}
+
     </main>
 
   </div>
