Updated titles to be more standardised

--- a/src/mustache/partials/content/section-career.mustache
+++ b/src/mustache/partials/content/section-career.mustache
@@ -28,7 +28,7 @@
 
     <article class="article article-work">
       <header class="article-header">
-        <h3 class="article-heading">Futurebrand style-guide app update </h3>
+        <h3 class="article-heading">Brand style-guide app update for Futurebrand</h3>
         <div class="article-metadata">
           <a rel="external" href="http://www.futurebrand.com">www.futurebrand.com</a>
           <span class="duration">
@@ -127,7 +127,7 @@
 
     <article class="article article-work">
       <header class="article-header">
-        <h3 class="article-heading">Microsite for Mediacom client pitch</h3>
+        <h3 class="article-heading">Client pitch microsite for Mediacom</h3>
         <div class="article-metadata">
           <a rel="external" href="http://www.mediacom.com">www.mediacom.com</a>
           <span class="duration">
