Added tracking scripts

--- a/src/mustache/partials/global/head.mustache
+++ b/src/mustache/partials/global/head.mustache
@@ -11,4 +11,7 @@
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
   <link rel="stylesheet" href="/assets/css/styles.css">
+
+  {{> partials/tracking/google }}
+  {{> partials/tracking/gosquared }}
 </head>
