Updated content for initial release

--- a/src/mustache/index.mustache
+++ b/src/mustache/index.mustache
@@ -19,9 +19,9 @@
 
       {{> partials/content/section-skills }}
 
-      {{> partials/content/section-projects }}
+      {{! partials/content/section-projects }}
 
-      {{> partials/content/section-learning }}
+      {{! partials/content/section-learning }}
 
       {{> partials/content/section-about }}
 
