Corrected link target

--- a/src/mustache/partials/content/section-skills.mustache
+++ b/src/mustache/partials/content/section-skills.mustache
@@ -20,7 +20,7 @@
       <li class="tag"><a rel="external" href="http://gruntjs.com">Grunt</a></li>
       <li class="tag"><a rel="external" href="https://git-scm.com">Git</a></li>
       <li class="tag"><a rel="external" href="https://bower.io">Bower</a></li>
-      <li class="tag"><a rel="external" href="http://www.opengroup.org/unix">Vagrant</a></li>
+      <li class="tag"><a rel="external" href="https://www.vagrantup.com">Vagrant</a></li>
       <li class="tag"><a rel="external" href="http://foundation.zurb.com">Foundation</a></li>
       <li class="tag"><a rel="external" href="http://getbootstrap.com">Bootstrap</a></li>
       <li class="tag"><a rel="external" href="https://www.scrum.org/Resources/What-is-Scrum">Scrum</a></li>
