Corrected duplicate list item content

--- a/src/mustache/partials/content/section-career.mustache
+++ b/src/mustache/partials/content/section-career.mustache
@@ -40,7 +40,7 @@
       <div class="article-content">
         <p>Working on Futurebrand’s style-guide application, based on Craft CMS.</p>
         <ul class="list">
-          <li>Implemented new brands and reworked some Twig templates to allow custom features.</li>
+          <li>Updated Grunt to separate existing jQuery based JavaScript code from new React based components.</li>
           <li>Re-organised SASS code to make implementation of new brand styles an easier process.</li>
           <li>Implemented new brands and reworked some Twig templates to allow custom features.</li>
         </ul>
