Set up hover states on SVGs for contact nav

--- a/src/sass/atoms/_icons.scss
+++ b/src/sass/atoms/_icons.scss
@@ -21,14 +21,26 @@
 
 .icon-email {
   @include icon(email);
+
+  &:active, &:focus, &:hover {
+    @include icon(email_hover);
+  }
 }
 
 .icon-github {
   @include icon(github);
+
+  &:active, &:focus, &:hover {
+    @include icon(github_hover);
+  }
 }
 
 .icon-telephone {
   @include icon(telephone);
+
+  &:active, &:focus, &:hover {
+    @include icon(telephone_hover);
+  }
 }
 
 .icon-twitter {
