--- a/src/sass/molecules/_nav-contact.scss
+++ b/src/sass/molecules/_nav-contact.scss
@@ -17,5 +17,12 @@
 
   a {
     padding: em(8) em(8) em(8) em(36);
+
+    // Position and size icons in this context
+    &:before {
+      @include position(absolute, 50% null null em(8));
+      @include size(em(20));
+      @include transform(translateY(-50%));
+    }
   }
 }
