Added FAB and supporting components to SASS

--- a/src/sass/manifest.scss
+++ b/src/sass/manifest.scss
@@ -22,6 +22,7 @@
 @import 'quarks/article';
 @import 'quarks/body';
 @import 'quarks/bold';
+
 @import 'quarks/footer';
 @import 'quarks/header';
 @import 'quarks/html';
@@ -33,8 +34,11 @@
 
 // Atoms
 
+@import 'atoms/animation-spin';
+@import 'atoms/animation-warp';
 @import 'atoms/avatar';
 @import 'atoms/body';
+@import 'atoms/circle';
 @import 'atoms/duration';
 @import 'atoms/groups';
 @import 'atoms/headings';
@@ -49,6 +53,7 @@
 
 @import 'molecules/article-content';
 @import 'molecules/article-header';
+@import 'molecules/floating-action-button';
 @import 'molecules/nav-contact';
 
 // Organisms
