--- a/src/sass/utilities/libraries/_svgs.scss
+++ b/src/sass/utilities/libraries/_svgs.scss
@@ -7,7 +7,7 @@
 
 $svgs: (
   arrow: (
-    svg: url("data:image/svg+xml,%3Csvg fill='%23007AFF' height='48' viewBox='0 0 24 24' width='48' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z'/%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3C/svg%3E"),
+    svg: url("data:image/svg+xml,%3Csvg fill='%23FFF' height='48' viewBox='0 0 24 24' width='48' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z'/%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3C/svg%3E"),
     fallback: url('/assets/img/png/icon-arrow.png')
   ),
   email: (
@@ -38,7 +38,7 @@ $svgs: (
     svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='16' viewBox='0 0 20 16'%3E%3Cpath fill='%23007AFF' d='M6.521 15.62c7.077 0 10.947-5.863 10.947-10.946 0-.167 0-.333-.01-.498.752-.544 1.402-1.218 1.918-1.99-.702.31-1.447.514-2.21.605.804-.48 1.405-1.236 1.692-2.127-.755.448-1.582.764-2.443.933C15.222.33 13.327.018 11.792.84c-1.534.82-2.327 2.57-1.934 4.265C6.765 4.95 3.883 3.49 1.93 1.085c-1.02 1.758-.5 4.007 1.19 5.136-.61-.017-1.21-.182-1.745-.48v.048c0 1.83 1.29 3.41 3.086 3.77-.565.156-1.16.178-1.736.067.504 1.567 1.948 2.64 3.594 2.672-1.362 1.07-3.045 1.65-4.777 1.65-.305 0-.61-.02-.915-.056 1.76 1.13 3.806 1.73 5.896 1.726'/%3E%3C/svg%3E"),
     fallback: url('/assets/img/png/icon-twitter.png')
   ),
-  twitter: (
+  twitter_hover: (
     svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='16' viewBox='0 0 20 16'%3E%3Cpath fill='%23FF5722' d='M6.521 15.62c7.077 0 10.947-5.863 10.947-10.946 0-.167 0-.333-.01-.498.752-.544 1.402-1.218 1.918-1.99-.702.31-1.447.514-2.21.605.804-.48 1.405-1.236 1.692-2.127-.755.448-1.582.764-2.443.933C15.222.33 13.327.018 11.792.84c-1.534.82-2.327 2.57-1.934 4.265C6.765 4.95 3.883 3.49 1.93 1.085c-1.02 1.758-.5 4.007 1.19 5.136-.61-.017-1.21-.182-1.745-.48v.048c0 1.83 1.29 3.41 3.086 3.77-.565.156-1.16.178-1.736.067.504 1.567 1.948 2.64 3.594 2.672-1.362 1.07-3.045 1.65-4.777 1.65-.305 0-.61-.02-.915-.056 1.76 1.13 3.806 1.73 5.896 1.726'/%3E%3C/svg%3E"),
     fallback: url('/assets/img/png/icon-twitter.png')
   )
