--- a/src/mustache/partials/content/section-career.mustache
+++ b/src/mustache/partials/content/section-career.mustache
@@ -59,7 +59,7 @@
       </header>
 
       <div class="article-content">
-        <p>Replaced the lead front end developer midway through the project, I completed the construction of components based on Bootstrap 3, and accompanying style-guide.</p>
+        <p>Replaced the lead front end developer midway through the project, I completed the construction of components based on Bootstrap 3 and accompanying style-guide.</p>
         <ul class="list">
           <li>Led a small team of two other front end developers in continuing the build.</li>
           <li>Worked with the project manager to organise tasks and attended daily Scrum remotely, utilising tools such as Slack to keep in touch with all participants in the project.</li>
