--- a/src/sass/atoms/_icons.scss
+++ b/src/sass/atoms/_icons.scss
@@ -7,7 +7,6 @@
 
   &:before {
     @include setSVG($icon);
-    background-position: center;
     background-repeat: no-repeat;
     content: '';
     display: inline-block;
@@ -44,4 +43,8 @@
 
 .icon-twitter {
   @include icon(twitter);
+
+  &:active, &:focus, &:hover {
+    @include icon(twitter_hover);
+  }
 }
